<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background_login"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:background="@drawable/drawable_pheezee_shape"
        app:layout_constraintBottom_toTopOf="@+id/layout_signin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="60dp"
            android:text="@string/continue_with"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintHorizontal_bias="0.0" />

        <ImageView
            android:id="@+id/login_iv_facebook_icon"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_above="@+id/textView15"
            android:layout_alignParentTop="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="20dp"
            android:layout_toEndOf="@+id/textView14"
            android:contentDescription="@string/cd_facebook_icon"
            app:srcCompat="@drawable/facebook_icon" />

        <ImageView
            android:id="@+id/login_iv_google_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_above="@+id/textView15"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="70dp"
            android:layout_toEndOf="@+id/login_iv_facebook_icon"
            android:contentDescription="@string/cd_google_icon"
            app:srcCompat="@drawable/google_icon" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/by_signing_in"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_signin"
        android:layout_width="match_parent"
        android:background="@color/translucent_black"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/pale_white"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            >
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="abc@startoonlabs.com"
                android:drawableLeft="@drawable/drawable_mailid_icon"
                android:drawablePadding="20dp"
                android:backgroundTint="@color/white"
                android:textColor="@color/pale_white"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/pale_white"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            >
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="asdasdadasdas"
                android:gravity="left"
                android:drawableLeft="@drawable/drawable_password_icon"
                android:drawablePadding="20dp"
                android:backgroundTint="@color/white"
                android:inputType="textPassword"
                android:textColor="@color/pale_white"
                />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="24dp"
        android:text="@string/new_user"
        android:textColor="@color/white"
        android:paddingTop="25dp"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/textView11"
        app:layout_constraintEnd_toStartOf="@+id/login_tv_signup"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:text="@string/have_account"
        android:textColor="@color/white"
        android:visibility="gone"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/login_tv_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:paddingTop="25dp"
        android:text="@string/signup"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/btn_login_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:paddingStart="8dp"
        android:visibility="gone"
        android:paddingEnd="8dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView11" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pheezee_logo" />


</android.support.constraint.ConstraintLayout>