<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.startoonlabs.apps.pheezee.activities.AppInfo">
    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar_bodypart"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentStart="true"
        app:elevation="5dp"
        android:elevation="5dp"
        android:background="@color/white_opaque">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="2dp"
                android:id="@+id/iv_back_app_info"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:src="@drawable/green_back_arrow"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_info"
                android:textSize="20dp"
                android:textColor="@color/good_green"
                android:layout_gravity="center"
                android:paddingStart="25dp"/>
        </LinearLayout>
    </android.support.v7.widget.Toolbar>
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/progress_gray_trans"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/ll_1"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"

                        android:layout_margin="5dp"
                        android:fontFamily="@font/ebrima"
                        android:text="@string/app_version"
                        android:textColor="@color/good_green"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:layout_marginEnd="5dp"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_deviceinfo_device_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:fontFamily="@font/ebrima"
                        android:text="@string/application_version"
                        android:textColor="@color/good_green"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>



    </android.support.constraint.ConstraintLayout>

</LinearLayout>
